# clang-dev-container

./: .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
include/: randomizer.hpp
src/: main.cpp  randomizer.cpp  randomizer_test.cpp
tasks/: build.sh  clean.sh  prepare_debug.sh  prepare_release.sh  run.sh  test.sh
